--- a/src/templates/privacy.html
+++ b/src/templates/privacy.html
@@ -54,7 +54,7 @@
                     </div>
 
                     <div class="card-footer">
-                        <a href="{{ url_for('consent') }}" class="btn btn-primary">Back to Consent</a>
+                        <a href="{{ url_for('main.consent') }}" class="btn btn-primary">Back to Consent</a>
                     </div>
                 </div>
             </div>
