--- a/src/templates/exit.html
+++ b/src/templates/exit.html
@@ -18,7 +18,7 @@
                     <div class="card-body">
                         <p>You cannot proceed with the survey without giving consent. If you change your mind, you can
                             return to the consent page and participate in the survey.</p>
-                        <a href="{{ url_for('consent') }}" class="btn btn-primary">Go Back to Consent Page</a>
+                        <a href="{{ url_for('main.consent') }}" class="btn btn-primary">Go Back to Consent Page</a>
                     </div>
                 </div>
             </div>
