--- a/src/templates/captcha_check.html
+++ b/src/templates/captcha_check.html
@@ -72,8 +72,8 @@
 
                         </div>
                         <div class="d-grid gap-2 mt-2">
-                            <button type="button" class="btn btn-outline-secondary" onclick="refreshCaptcha()">Refresh
-                                CAPTCHA</button>
+                            <button type="button" class="btn btn-outline-secondary" onclick="refreshCaptcha()">
+                                <b>Refresh CAPTCHA</b></button>
                         </div>
 
                         <div class="mt-3">
