Survey done, wopkring on admin page

--- a/src/templates/admin_login.html
+++ b/src/templates/admin_login.html
@@ -13,6 +13,8 @@
         <h2 class="text-center">Admin Login</h2>
 
         <form method="POST" action="{{ url_for('admin_bp.admin_login') }}" class="mt-4">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
+
             <div class="mb-3">
                 <label for="username" class="form-label">Username</label>
                 <input type="text" class="form-control" id="username" name="username" required>
