--- a/src/templates/phase_control.html
+++ b/src/templates/phase_control.html
@@ -13,7 +13,7 @@
             <div class="col-md-8">
                 <div class="card">
                     <div class="card-header bg-primary text-white">
-                        <h3>Phasing into Treatment/Control</h3>
+                        <!-- <h3>Phasing into Treatment/Control</h3> -->
                     </div>
                     <div class="card-body">
                         <p>
@@ -72,7 +72,7 @@
             }
 
             if (selectedOption.value !== "read_news") {
-                alert("Incorrect answer. Please select 'As an investor, I will read a piece of news and answer a question related to it.'");
+                alert("Your answer is not correct, please read the question again.");
                 return false;
             }
 
