--- a/src/templates/instructions.html
+++ b/src/templates/instructions.html
@@ -21,7 +21,7 @@
                             there are participants who do not carefully read the questions and just quickly click
                             through the survey. This means that there are a lot of random answers which compromise the
                             results of research studies. To show that you read our questions carefully, please choose
-                            both <strong>others</strong> and <strong>agree</strong> as your answer to the next question.
+                            both Others and Agree options as your answer to the next question.
                         </p>
 
                         <form method="POST" action="{{ url_for('survey_bp.educating') }}" id="attentionCheckForm">
@@ -54,16 +54,18 @@
         ];
 
         // Shuffle array
+        /*
         function shuffle(array) {
             for (let i = array.length - 1; i > 0; i--) {
                 const j = Math.floor(Math.random() * (i + 1));
                 [array[i], array[j]] = [array[j], array[i]];
             }
         }
+        */
 
         // Inject shuffled checkboxes into the DOM
         window.onload = function () {
-            shuffle(options);
+            //shuffle(options);
             const container = document.getElementById("checkboxContainer");
             options.forEach(opt => {
                 const div = document.createElement("div");
